syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/commanddata";

package commanddata;

message CreateUserCommandData {
  // Email address of the user
  string email = 1;
  // Name of the user
  string name = 2;
}

message CreateUserRoleBindingCommandData {
  // Unique identifier of the user (UUID 128-bit number)
  string user_id = 1;
  // Name of the role to add
  string role = 2;
  // Scope of the role
  string scope = 3;
  // Unique identifier of the affected resource within scope (UUID 128-bit
  // number)
  string resource = 4;
}